@@ -3,6 +3,7 @@
 - Sync/Mirroring: Send notifications to others devices (outbound mode):
 - Media info playback (song and movie info with their thumbs!)
 - Added to settings "Send a test notification" button
+- Added support for Pushbullet Channels
 
 [B]0.6.0b[/B]
 - Hello Pushbullet :)
